2010-09-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* net/gnutls.el (gnutls, gnutls-log-level): Add group and custom
	variable.
	(starttls-negotiate): Use it.

2010-09-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/gnutls.el (starttls-negotiate): Stop looping when we get a t
	back.

2010-09-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/pcase.el (pcase-let*, pcase-let): plet -> pcase-let.

2010-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/gnutls.el (starttls-negotiate): Avoid the cl.el decf function.

	* net/netrc.el (netrc-store-data): New function.

2010-09-26  Teodor Zlatanov  <tzz@lifelogs.com>

	* net/gnutls.el: GnuTLS glue code to set up a connection.

2010-09-25  Julien Danjou  <julien@danjou.info>

	* notifications.el: Call dbus-register-signal only if it is bound.

2010-09-25  Glenn Morris  <rgm@gnu.org>

	* eshell/em-alias.el, eshell/em-banner.el, eshell/em-basic.el:
	* eshell/em-cmpl.el, eshell/em-dirs.el, eshell/em-glob.el:
	* eshell/em-hist.el, eshell/em-ls.el, eshell/em-pred.el:
	* eshell/em-prompt.el, eshell/em-rebind.el, eshell/em-script.el:
	* eshell/em-smart.el, eshell/em-term.el, eshell/em-unix.el:
	* eshell/esh-cmd.el, eshell/esh-ext.el, eshell/esh-io.el:
	* eshell/esh-mode.el, eshell/esh-proc.el, eshell/esh-test.el:
	* eshell/esh-util.el, eshell/esh-var.el:
	Remove leading `*' from docs of faces and defcustoms.

2010-09-25  Ulrich Mueller  <ulm@gentoo.org>

	* eshell/em-ls.el (eshell-ls-archive-regexp):
	* eshell/esh-util.el (eshell-tar-regexp):
	* ibuffer.el (ibuffer-compressed-file-name-regexp):
	* info.el (Info-suffix-list):
	* international/mule.el (auto-coding-alist):
	* woman.el (woman-file-regexp, woman-file-compression-regexp):
	* progmodes/etags.el (tags-compression-info-list):
	Support xz compression.

2010-09-25  Chong Yidong  <cyd@stupidchicken.com>

	* files.el (get-free-disk-space): Don't assume the "df" output
	columns line up (Bug#6995).

2010-09-25  Juanma Barranquero  <lekktu@gmail.com>
